# snapshot

./: CLAUDE.md  README.md  pyproject.toml
.internal/: chart.py  features.py  playground.py  prompts.md  stats.py
src/shot/: bridge.py  dataphora.py  demo.py  utils.py
